# pgov

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml  lint.yml
android/: Android.bp  file_contexts  pgovd.rc  pgovd.te
include/: compiler.h  conf.h  daemon.h  detect.h  epoll.h  fs.h  lockfile.h  memory.h  opt.h  parser.h  paths.h  prop.h  psi.h  rlimit.h  scan.h  sensor.h  str.h  sysfs.h  task.h  topo.h
include/daemon/: config.h  crash.h  daemon.h  lockfile.h  logger.h  paths.h  properties.h  rlimit.h  signal.h  task.h  topology.h
include/pascal_gov/: compiler.h  cpu.h  filter.h  math.h  parser.h  psi.h  sensor.h
include/pg/: config.h  cpu.h  gov.h  kalman.h  log.h  math.h  poll.h  signal.h  state.h  sweep.h  thermal.h  time.h  tune.h
modules/: customize.sh  module.prop  service.sh  uninstall.sh  update.json
modules/common/: functions.sh  install.sh
modules/system/etc/: pgovd.conf
src/: main.c
src/core/: cpu.c  daemon.c  epoll.c  gov.c  kalman.c  poll.c  sweep.c  thermal.c
src/hal/: properties.c  psi.c  sensor.c  topology.c
src/policy/: config.c  tune.c
src/sched/: cpu.c  filter.c  poller.c  thermal.c
src/sys/: conf.c  crash.c  detect.c  fs.c  lockfile.c  memory.c  opt.c  prop.c  psi.c  rlimit.c  scan.c  sensor.c  signal.c  sysfs.c  task.c  topo.c
